Add multi-site AI-powered news backend for Render deployment
- Implement multi-site scraper with New Yorker support
- Add AI content processing with OpenAI integration
- Create enhanced database schema for multiple sources
- Add Render deployment configuration (render.yaml)
- Include article dashboard with NYT-style design
- Set up automated cron jobs for 24/7 operation
- Add comprehensive deployment documentation

Backend ready for 24/7 cloud deployment with AI-driven content curation

--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "scrape:newyorker": "node api/scrape-newyorker.js"
+    "scrape:newyorker": "node api/scrape-newyorker.js",
+    "scrape:all": "node api/scrape-all.js",
+    "ai:process": "node ai/processor.js",
+    "ai:select": "node ai/select-and-generate.js",
+    "dashboard": "node dashboard-server.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "fast-xml-parser": "^4.5.0",
+    "openai": "^4.71.1",
     "pg": "^8.13.0"
   }
 }
